@@ -64,10 +64,21 @@ div#navigation table {
 <h1>History</h1>
 <div class="details">
 <span id="author" class="author">== 7.0.1</span><br>
-<span id="revdate">* Refined documents. #308</span>
+<span id="revdate">* install *.ipp files along with other header files #309</span>
 </div>
 </div>
 <div id="content">
+<div id="preamble">
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Refined documents. #308</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_7_0_0">7.0.0</h2>
 <div class="sectionbody">
